# annomemo

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.py
.gitea/workflows/: quay-build.yaml
.github/workflows/: docker-build.yaml
src/annomemo/: __init__.py  ocr.py  plugins.py
